--- a/index.html
+++ b/index.html
@@ -1,18 +1,366 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>HESAA SWA + SharePoint PoC</title>
-    <style>
-      body { font-family: system-ui, sans-serif; display: grid; place-items: center; height: 100vh; margin: 0; }
-      .card { padding: 2rem; border: 1px solid #ccc; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-    </style>
-  </head>
-  <body>
-    <div class="card">
-      <h1>✅ Hello HESAA</h1>
-      <p>Static Web App is live. Next step: Connect to SharePoint Online.</p>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>HESAA SWA + SharePoint PoC</title>
+
+  <!-- Accessible, Fluent-ish design tokens -->
+  <style>
+    :root{
+      --bg: #ffffff;
+      --fg: #1b1b1b;
+      --muted:#5c5c5c;
+      --brand:#2563eb;            /* Fluent-like blue */
+      --brand-600:#1e4fd8;
+      --surface:#f5f7fb;
+      --border:#e6e8ee;
+      --success:#0f7b0f;
+      --error:#b91c1c;
+      --focus:#0a84ff;
+      --radius:14px;
+      --shadow:0 8px 30px rgba(0,0,0,.08);
+    }
+    @media (prefers-color-scheme: dark){
+      :root{
+        --bg:#0f1115; --fg:#e7e7ea; --muted:#a7a7b2; --surface:#151923; --border:#24283a;
+        --brand:#4c8dff; --brand-600:#3c74e6;
+      }
+    }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:Segoe UI,system-ui,-apple-system,Arial,sans-serif;background:var(--bg);color:var(--fg);line-height:1.5}
+    a{color:var(--brand)} a:hover{color:var(--brand-600)}
+    img{max-width:100%;height:auto}
+    .container{max-width:1100px;margin-inline:auto;padding:1rem}
+    .sr-only{position:absolute!important;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+    .skip-link{position:absolute;left:-9999px;top:0;background:#fff;padding:.5rem 1rem;border-radius:8px;box-shadow:var(--shadow);z-index:999}
+    .skip-link:focus{left:.5rem;top:.5rem}
+    :focus-visible{outline:3px solid var(--focus);outline-offset:2px;border-radius:6px}
+
+    /* Header / Nav */
+    header{background:var(--bg);position:sticky;top:0;z-index:50;border-bottom:1px solid var(--border)}
+    .brand{display:flex;gap:.6rem;align-items:center;font-weight:600}
+    nav ul{display:flex;gap:1rem;list-style:none;margin:0;padding:0}
+    nav a{display:inline-block;padding:.5rem .75rem;border-radius:10px;text-decoration:none}
+    nav a[aria-current="page"], nav a:hover{background:var(--surface)}
+
+    /* Hero */
+    .hero{position:relative;border-radius:var(--radius);overflow:hidden;background:#dfe9ff}
+    .hero img{width:100%;display:block;object-fit:cover;max-height:360px}
+    .hero .cta{position:absolute;inset:auto 0 0 0;background:linear-gradient(180deg,transparent,rgba(0,0,0,.6));color:#fff;padding:2rem}
+    .hero h1{margin:.25rem 0 0;font-size:clamp(1.6rem,3vw,2.2rem)}
+    .hero p{margin:.25rem 0 0;color:#e9eefc}
+
+    /* Carousel */
+    .carousel{margin-top:1rem;border-radius:var(--radius);overflow:hidden;background:var(--surface)}
+    .carousel-track{display:flex;scroll-snap-type:x mandatory;overflow:auto;gap:.5rem;padding:.5rem}
+    .carousel-track img{scroll-snap-align:center;border-radius:10px;min-width:100%;max-height:260px;object-fit:cover}
+    .carousel-controls{display:flex;justify-content:space-between;gap:.5rem;margin-top:.5rem}
+    .btn{border:1px solid var(--border);background:var(--bg);padding:.6rem .9rem;border-radius:12px;cursor:pointer}
+    .btn.primary{background:var(--brand);border-color:var(--brand);color:#fff}
+    .btn.primary:hover{background:var(--brand-600)}
+    .btn:disabled{opacity:.6;cursor:not-allowed}
+
+    /* Grid */
+    .grid{display:grid;gap:1rem}
+    @media(min-width:900px){.grid.cols-3{grid-template-columns:repeat(3,1fr)}}
+
+    /* Cards / Quick links / Spotlight */
+    .card{background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);padding:1rem;box-shadow:var(--shadow)}
+    .quicklinks a{display:block;background:var(--bg);border:1px solid var(--border);padding:.7rem .9rem;border-radius:12px;text-decoration:none}
+    .quicklinks a:hover{background:var(--surface)}
+    .badge{display:inline-block;padding:.2rem .5rem;border-radius:999px;border:1px solid var(--border);background:var(--bg);font-size:.8rem;color:var(--muted)}
+
+    /* Table */
+    table{width:100%;border-collapse:separate;border-spacing:0;background:var(--surface);border:1px solid var(--border);border-radius:14px;overflow:hidden}
+    thead th{background:var(--bg);text-align:left;padding:.75rem;border-bottom:1px solid var(--border)}
+    tbody td{padding:.7rem;border-top:1px solid var(--border);vertical-align:top}
+    tbody tr:hover{background:rgba(37,99,235,.05)}
+    .status{font-weight:600}
+    .kpi{color:var(--muted);font-size:.9rem}
+
+    /* Form */
+    form{display:grid;gap:.75rem}
+    label{font-weight:600}
+    input[type="text"], textarea, select{width:100%;padding:.6rem .7rem;border-radius:10px;border:1px solid var(--border);background:var(--bg);color:var(--fg)}
+    .form-actions{display:flex;gap:.5rem;align-items:center}
+    .notice{padding:.6rem .8rem;border-radius:10px;border:1px solid var(--border)}
+    .notice.success{border-color:#b5e0b5;background:#ecf9ec;color:var(--success)}
+    .notice.error{border-color:#f4b4b4;background:#fff1f1;color:var(--error)}
+
+    footer{margin-top:2rem;padding:2rem 0;border-top:1px solid var(--border);color:var(--muted)}
+  </style>
+
+  <!-- DOMPurify (sanitizes Enhanced Rich Text safely) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/dompurify@3.0.9/dist/purify.min.js"
+          integrity="sha384-+gQG3LQk5nM3p9tJ2k3oY0n2jz8m0mWz+eL9tRj5c9Y7d7l3O9vSgOZKQ3Y/2B3X"
+          crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <!-- Header / Navigation -->
+  <header role="banner">
+    <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:1rem;padding:.8rem 1rem">
+      <div class="brand" aria-label="HESAA Home">
+        <img src="https://static2.sharepointonline.com/files/fabric/assets/brand-icons/product/svg/office_48x1.svg" alt="" width="28" height="28" />
+        <span>HESAA Web Requests</span>
+      </div>
+      <nav aria-label="Primary">
+        <ul>
+          <li><a href="#" aria-current="page">Home</a></li>
+          <li><a href="#requests">Requests</a></li>
+          <li><a href="#create">Create</a></li>
+          <li><a href="#quicklinks">Quick links</a></li>
+        </ul>
+      </nav>
     </div>
-  </body>
+  </header>
+
+  <!-- Hero -->
+  <div class="container">
+    <section class="hero" aria-label="Hero">
+      <img src="/assets/hero.jpg" alt="Modern abstract background" />
+      <div class="cta">
+        <p class="badge">PoC</p>
+        <h1>SharePoint‑backed Requests</h1>
+        <p>Create and track website requests backed by Microsoft 365.</p>
+      </div>
+    </section>
+
+    <!-- Carousel (accessible, no auto-play if reduced motion) -->
+    <section class="carousel" aria-label="Highlights" role="region" aria-roledescription="carousel">
+      <div class="carousel-track" id="carouselTrack">
+        <img src="/assets/slide1.jpg" alt="Modern workspace" />
+        <img src="/assets/slide2.jpg" alt="Team collaboration" />
+        <img src="/assets/slide3.jpg" alt="Analytics and insights" />
+      </div>
+      <div class="carousel-controls" aria-label="Carousel controls">
+        <button class="btn" id="prevBtn" aria-label="Previous slide">← Prev</button>
+        <button class="btn" id="nextBtn" aria-label="Next slide">Next →</button>
+      </div>
+    </section>
+
+    <!-- Spotlight -->
+    <section class="grid cols-3" aria-label="Spotlight" style="margin-top:1rem">
+      <article class="card">
+        <h3>Accessibility</h3>
+        <p>Built with semantic landmarks, keyboard navigation, visible focus and reduced‑motion preferences.</p>
+      </article>
+      <article class="card">
+        <h3>Security</h3>
+        <p>Enhanced Rich Text is sanitized on render via DOMPurify to prevent XSS.</p>
+      </article>
+      <article class="card">
+        <h3>SharePoint + Graph</h3>
+        <p>Backed by Microsoft Graph with app‑only permissions for server‑side calls.</p>
+      </article>
+    </section>
+
+    <!-- Quick Links -->
+    <section id="quicklinks" class="grid cols-3 quicklinks" aria-label="Quick links" style="margin-top:1rem">
+      <a class="card" href="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/Lists/Web%20Requests" target="_blank" rel="noopener">Open SharePoint List</a>
+      <a class="card" href="https://admin.microsoft.com" target="_blank" rel="noopener">Microsoft 365 Admin</a>
+      <a class="card" href="https://portal.azure.com" target="_blank" rel="noopener">Azure Portal</a>
+    </section>
+
+    <!-- Requests Table + Search -->
+    <main id="main" tabindex="-1">
+      <section id="requests" aria-labelledby="requests-title" style="margin-top:1.5rem">
+        <div style="display:flex;justify-content:space-between;align-items:end;gap:1rem">
+          <div>
+            <h2 id="requests-title">Requests</h2>
+            <p class="kpi"><span id="resultCount">0</span> result(s)</p>
+          </div>
+          <div>
+            <label for="search" class="sr-only">Search requests</label>
+            <input id="search" type="text" placeholder="Search title or description…" aria-describedby="searchHelp" />
+            <div id="searchHelp" class="sr-only">Type to filter the table rows by title or description.</div>
+          </div>
+        </div>
+
+        <div class="card" style="margin-top:.6rem">
+          <div role="region" aria-label="Requests table">
+            <table>
+              <thead>
+                <tr>
+                  <th scope="col">Title</th>
+                  <th scope="col">Type</th>
+                  <th scope="col">Priority</th>
+                  <th scope="col">Request Date</th>
+                  <th scope="col">End?</th>
+                  <th scope="col">Created</th>
+                  <th scope="col">Modified</th>
+                  <th scope="col">Details</th>
+                </tr>
+              </thead>
+              <tbody id="rows">
+                <tr><td colspan="8" class="kpi">Loading…</td></tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
+
+      <!-- Create Form -->
+      <section id="create" aria-labelledby="create-title" style="margin-top:1.5rem">
+        <h2 id="create-title">Create a Request</h2>
+        <div class="card">
+          <form id="reqForm" novalidate>
+            <div>
+              <label for="fTitle">Title</label>
+              <input id="fTitle" name="Title" type="text" required aria-required="true" />
+            </div>
+            <div>
+              <label for="fDesc">Description (Enhanced Rich Text supported)</label>
+              <textarea id="fDesc" name="RequestDescription" rows="5" placeholder="You can paste formatted text from Word/Outlook"></textarea>
+            </div>
+            <div style="display:flex;gap:.75rem;flex-wrap:wrap">
+              <div style="min-width:200px">
+                <label for="fType">Type</label>
+                <select id="fType" name="RequestType">
+                  <option>Bug</option>
+                  <option>Enhancement</option>
+                  <option>Inquiry</option>
+                  <option>Maintenance Message</option>
+                </select>
+              </div>
+              <div style="min-width:200px">
+                <label for="fPri">Priority</label>
+                <select id="fPri" name="Priority">
+                  <option>Low</option><option>Medium</option><option>High</option><option>Urgent</option>
+                </select>
+              </div>
+              <div style="display:flex;align-items:center;gap:.5rem">
+                <input id="fEnd" name="RequestEndDate" type="checkbox" />
+                <label for="fEnd">End Date?</label>
+              </div>
+            </div>
+            <div class="form-actions">
+              <button class="btn primary" type="submit">Submit</button>
+              <span id="formMsg" role="status" aria-live="polite" class="kpi"></span>
+            </div>
+          </form>
+          <div id="alert" class="notice sr-only" aria-live="assertive"></div>
+        </div>
+      </section>
+    </main>
+
+    <footer role="contentinfo">
+      <div class="container">
+        <p>© <span id="yr"></span> HESAA — Proof of Concept</p>
+      </div>
+    </footer>
+  </div>
+
+  <script>
+  // Year
+  document.getElementById('yr').textContent = new Date().getFullYear();
+
+  // Carousel controls (no auto-play if reduced motion)
+  const track = document.getElementById('carouselTrack');
+  document.getElementById('prevBtn').addEventListener('click', ()=> track.scrollBy({left:-track.clientWidth, behavior: 'smooth'}));
+  document.getElementById('nextBtn').addEventListener('click', ()=> track.scrollBy({left: track.clientWidth, behavior: 'smooth'}));
+
+  // Helpers
+  const fmt = (d)=> d ? new Date(d).toLocaleDateString() : '';
+  const rowsEl = document.getElementById('rows');
+  const countEl = document.getElementById('resultCount');
+  const searchEl = document.getElementById('search');
+
+  let DATA = [];
+
+  function renderRows(filter=''){
+    const f = filter.trim().toLowerCase();
+    const allowed = ['b','i','em','strong','u','span','div','p','ul','ol','li','br','a'];
+    const clean = (html)=> DOMPurify.sanitize(html || '', {ALLOWED_TAGS: allowed, ALLOWED_ATTR: ['href','style','target']});
+    const match = (t)=> t && t.toLowerCase().includes(f);
+
+    const visible = DATA.filter(x =>
+      !f ||
+      match(x.Title||'') ||
+      match((x.RequestDescription||'').replace(/<[^>]+>/g,''))
+    );
+
+    countEl.textContent = visible.length;
+
+    rowsEl.innerHTML = visible.map(x => {
+      const descHtml = clean(x.RequestDescription);
+      return `
+        <tr>
+          <td>${x.Title ?? ''}</td>
+          <td>${x.RequestType ?? ''}</td>
+          <td><span class="status">${x.Priority ?? ''}</span></td>
+          <td>${fmt(x.RequestDate)}</td>
+          <td>${x.RequestEndDate ? 'Yes':'No'}</td>
+          <td>${fmt(x.Created)}</td>
+          <td>${fmt(x.Modified)}</td>
+          <td>
+            <details>
+              <summary>View</summary>
+              <div>${descHtml}</div>
+            </details>
+          </td>
+        </tr>`;
+    }).join('') || `<tr><td colspan="8" class="kpi">No results</td></tr>`;
+  }
+
+  async function loadData(){
+    try{
+      const res = await fetch('/api/requests');
+      const json = await res.json();
+      if(json.ok){
+        DATA = (json.items||[]).map(i=>i); // already fields-only from API
+        renderRows(searchEl.value);
+      }else{
+        rowsEl.innerHTML = `<tr><td colspan="8" class="kpi">Error: ${json.error||'Unknown'}</td></tr>`;
+      }
+    }catch(err){
+      rowsEl.innerHTML = `<tr><td colspan="8" class="kpi">Network error: ${String(err)}</td></tr>`;
+    }
+  }
+
+  searchEl.addEventListener('input', e=>renderRows(e.target.value));
+  loadData();
+
+  // Create form
+  const form = document.getElementById('reqForm');
+  const msg = document.getElementById('formMsg');
+  const alertBox = document.getElementById('alert');
+
+  form.addEventListener('submit', async (e)=>{
+    e.preventDefault();
+    msg.textContent = 'Submitting…';
+    alertBox.className = 'notice sr-only';
+    try{
+      const formData = new FormData(form);
+      const data = Object.fromEntries(formData.entries());
+      data.RequestEndDate = !!formData.get('RequestEndDate');
+
+      const res = await fetch('/api/requests', {
+        method:'POST',
+        headers:{'Content-Type':'application/json'},
+        body: JSON.stringify(data)
+      });
+      const json = await res.json();
+      if(json.ok){
+        msg.textContent = 'Created!';
+        alertBox.textContent = 'Request successfully created.'; 
+        alertBox.className = 'notice success';
+        form.reset();
+        loadData();
+      }else{
+        msg.textContent = '';
+        alertBox.textContent = 'Failed to create the request: ' + (json.error || 'Unknown error');
+        alertBox.className = 'notice error';
+      }
+    }catch(err){
+      msg.textContent = '';
+      alertBox.textContent = 'Network error: ' + String(err);
+      alertBox.className = 'notice error';
+    }
+  });
+  </script>
+</body>
 </html>
