--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   // -------- Settings (your SharePoint assets) ----------
   const ASSETS = "https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/MediaAssets/";
   const IMAGES = {
-    hero:  ASSETS + "hero.jpg",
+    hero:  ASSETS + "hero.png",
     slide1: ASSETS + "slide1.jpg",
     slide2: ASSETS + "slide2.jpg",
     slide3: ASSETS + "slide3.jpg"
