--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
   // -------- Settings (your SharePoint assets) ----------
   const ASSETS = "https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/MediaAssets/";
   const IMAGES = {
-    hero:  ASSETS + "hero.png",
-    slide1: ASSETS + "slide1.jpg",
+    hero:  ASSETS + "Hero.png",
+    slide1: ASSETS + "slide1.png",
     slide2: ASSETS + "slide2.jpg",
     slide3: ASSETS + "slide3.jpg"
   };
