--- a/index.html
+++ b/index.html
@@ -276,17 +276,38 @@
 
   <script>
   // -------- Settings (your SharePoint assets) ----------
-  const ASSETS = "https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/MediaAssets/";
-  const IMAGES = {
-    hero:  ASSETS + "Hero.png",
-    slide1: ASSETS + "slide1.png",
-    slide2: ASSETS + "slide2.jpg",
-    slide3: ASSETS + "slide3.jpg"
+  const SPIMG = {
+    site:   'https://vkolugurihesaa.sharepoint.com',
+    siteRel:'/sites/HESAAWebRequestsPoC',
+    lib:    'MediaAssets',
+    files: {
+      hero:  'Hero.png',
+      slide1:'Slide1.png',
+      slide2:'Slide2.png',
+      slide3:'Slide3.png'
+    }
   };
-  document.getElementById('heroImg').src = IMAGES.hero;
-  document.getElementById('slide1').src = IMAGES.slide1;
-  document.getElementById('slide2').src = IMAGES.slide2;
-  document.getElementById('slide3').src = IMAGES.slide3;
+
+  const directUrl = (name) =>
+    `${SPIMG.site}${SPIMG.siteRel}/${SPIMG.lib}/${encodeURIComponent(name)}`;
+
+  // Use the REST $value endpoint as a fallback (forces the raw file stream)
+  const valueUrl = (name) =>
+    `${SPIMG.site}/_api/web/GetFileByServerRelativeUrl('${SPIMG.siteRel}/${SPIMG.lib}/${name.replace(/'/g,"%27")}')/$value`;
+
+  function setSpImg(id, fileName){
+    const el = document.getElementById(id);
+    const first = directUrl(fileName);
+    const fallback = valueUrl(fileName);
+    el.src = first;
+    el.onerror = () => { el.onerror = null; el.src = fallback; };
+  }
+
+  // Set hero + slides (PNG, exact names)
+  setSpImg('heroImg', SPIMG.files.hero);
+  setSpImg('slide1',  SPIMG.files.slide1);
+  setSpImg('slide2',  SPIMG.files.slide2);
+  setSpImg('slide3',  SPIMG.files.slide3);
 
   // -------- Year ----------
   document.getElementById('yr').textContent = new Date().getFullYear();
