--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
   <title>HESAA SWA + SharePoint PoC</title>
 
   <style>
+    /* Base grayscale + inking */
+:root{
+  --ink-900:#0b1220; --ink-800:#162033; --ink-600:#334155;
+  --surface-50:#f8fafc; --surface-100:#f1f5f9; --surface-200:#e2e8f0; --surface-300:#cbd5e1;
+
+  /* Default theme (blue) */
+  --brand-600:#2563eb; --brand-500:#3b82f6; --accent-400:#60a5fa;
+}
+
+/* Teal theme */
+body.theme-teal{
+  --brand-600:#0f766e; --brand-500:#14b8a6; --accent-400:#2dd4bf;
+}
+
+/* Purple theme */
+body.theme-purple{
+  --brand-600:#7c3aed; --brand-500:#8b5cf6; --accent-400:#a78bfa;
+}
+
+/* Rose theme */
+body.theme-rose{
+  --brand-600:#e11d48; --brand-500:#f43f5e; --accent-400:#fb7185;
+}
+
     :root{
       --bg:#ffffff; --fg:#1b1b1b; --muted:#5c5c5c;
       --brand:#2563eb; --brand-600:#1e4fd8;
@@ -47,14 +71,50 @@
     .badge{display:inline-block;padding:.2rem .5rem;border-radius:999px;border:1px solid var(--border);background:var(--bg);font-size:.8rem;color:var(--muted)}
 
     /* Carousel */
-    .carousel{margin-top:1rem;border-radius:var(--radius);overflow:hidden;background:var(--surface)}
-    .carousel-track{display:flex;scroll-snap-type:x mandatory;overflow:auto;gap:.5rem;padding:.5rem}
-    .carousel-track img{scroll-snap-align:center;border-radius:10px;min-width:100%;max-height:260px;object-fit:cover}
-    .carousel-controls{display:flex;justify-content:space-between;gap:.5rem;margin-top:.5rem}
-    .btn{border:1px solid var(--border);background:var(--bg);padding:.6rem .9rem;border-radius:12px;cursor:pointer}
-    .btn.primary{background:var(--brand);border-color:var(--brand);color:#fff}
-    .btn.primary:hover{background:var(--brand-600)}
-    .btn:disabled{opacity:.6;cursor:not-allowed}
+.carousel { position: relative; overflow: hidden; }
+.carousel-track {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 100%;
+  scroll-snap-type: x mandatory;
+  overflow-x: auto;
+  scrollbar-width: none;
+}
+.carousel-track::-webkit-scrollbar { display: none; }
+.slide { position: relative; scroll-snap-align: start; }
+.slide img { width: 100%; height: auto; display: block; }
+
+/* Centered overlay arrows */
+.carousel-arrow {
+  position: absolute; top: 50%; transform: translateY(-50%);
+  width: 48px; height: 48px; border-radius: 9999px;
+  border: none; background: color-mix(in srgb, var(--brand-600) 90%, transparent);
+  color: #fff; font-size: 22px; display: grid; place-items: center;
+  cursor: pointer; box-shadow: 0 2px 10px rgba(0,0,0,.25);
+}
+.carousel-arrow.left  { left: 12px; }
+.carousel-arrow.right { right: 12px; }
+.carousel-arrow:focus-visible { outline: 3px solid var(--accent-400); }
+
+/* Improved hero text legibility */
+.hero-caption {
+  position: absolute; left: 0; right: 0; bottom: 0;
+  padding: clamp(12px, 3vw, 24px) clamp(16px, 4vw, 32px);
+  color: #fff;
+}
+.hero-caption::before {
+  content: "";
+  position: absolute; inset: -20px 0 0 0; /* extend slightly above the text */
+  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,.55) 70%, rgba(0,0,0,.70) 100%);
+  backdrop-filter: blur(2px);
+  z-index: -1;
+}
+.hero-caption h2 { margin: 0 0 6px; font-size: clamp(22px, 3.2vw, 40px); }
+.hero-caption p  { margin: 0; opacity: .95; }
+
+/* Center section headers globally */
+.section-title { text-align: center; margin: 2.5rem 0 1rem; font-weight: 700; }
+
 
     /* Grid / Cards */
     .grid{display:grid;gap:1rem}
@@ -64,13 +124,79 @@
     .card{background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);padding:1rem;box-shadow:var(--shadow)}
 
     /* Quick links */
-    .quicklinks a{display:flex;align-items:center;gap:.7rem;background:var(--tile);border:1px solid var(--border);padding:.9rem 1rem;border-radius:12px;text-decoration:none}
-    .ql-icon{width:28px;height:28px;border-radius:8px;background:var(--brand);display:inline-flex;align-items:center;justify-content:center;color:#fff;font-weight:700}
-    .quicklinks a:hover{transform:translateY(-1px);box-shadow:var(--shadow)}
+/* Layout */
+.ql { display: grid; gap: 16px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); }
+.ql-card {
+  display: grid; place-items: center; gap: 10px;
+  padding: 18px 14px; border-radius: 14px;
+  background: var(--surface-50); text-decoration: none;
+  border: 1px solid var(--surface-200);
+  transition: transform .15s ease, box-shadow .15s ease, border-color .15s ease;
+}
+.ql-card:focus-visible { outline: 3px solid var(--accent-400); outline-offset: 2px; }
+.ql-card:hover { transform: translateY(-2px); box-shadow: 0 10px 25px rgba(0,0,0,.08); border-color: var(--surface-300); }
+.ql-gh { background:#24292e; }
+
+/* Big centered icon */
+.ql-icon {
+  width: 56px; height: 56px; border-radius: 12px;
+  display: grid; place-items: center;
+  font-weight: 800; font-size: 18px; letter-spacing:.5px;
+  color: #fff; user-select: none; overflow: hidden; flex-shrink: 0;
+}
+
+/* Label never overlaps the icon */
+.ql-label {
+  text-align: center; font-weight: 600; color: var(--ink-800);
+  line-height: 1.25; max-width: 18ch;
+}
+
+/* Brand tints */
+.ql-sp { background: #1372d8; }       /* SharePoint */
+.ql-ms { background: #2563eb; }       /* M365 */
+.ql-az { background: #0ea5e9; }       /* Azure */
+
 
     /* Spotlight */
     .spot-card h3{display:flex;align-items:center;gap:.5rem}
     .spot-icon{width:20px;height:20px}
+    .spotlight .ql-icon { width: 64px; height: 64px; font-size: 20px; }
+  .spotlight .ql-card { padding: 22px 16px; }
+    /* Section headers already centered via .section-title */
+
+/* Spotlight grid reuses .ql but tweaks sizing/spacing */
+.spotlight .ql-card {
+  grid-template-rows: auto auto auto;
+  padding: 22px 18px;
+  min-height: 160px;
+}
+
+/* Bigger centered icon for Spotlight */
+.spotlight .ql-icon {
+  width: 64px;
+  height: 64px;
+  font-size: 20px;
+  border-radius: 14px;
+}
+
+.ql-title {
+  font-weight: 700;
+  font-size: 1.05rem;
+  color: var(--ink-800);
+  text-align: center;
+}
+
+.ql-desc {
+  margin: 0;
+  color: var(--ink-600);
+  text-align: center;
+  line-height: 1.3;
+}
+
+/* If you use image icons */
+.ql-img { object-fit: contain; background: transparent; }
+
+
 
     /* Table */
     table{width:100%;border-collapse:separate;border-spacing:0;background:var(--surface);border:1px solid var(--border);border-radius:14px;overflow:hidden}
@@ -134,66 +260,93 @@
     </section>
 
     <!-- Carousel -->
-    <section class="carousel" aria-label="Highlights" role="region" aria-roledescription="carousel">
-      <div class="carousel-track" id="carouselTrack" tabindex="0" aria-label="Slides">
-        <img id="slide1" alt="Modern workspace" />
-        <img id="slide2" alt="Team collaboration" />
-        <img id="slide3" alt="Analytics and insights" />
-      </div>
-      <div class="carousel-controls" aria-label="Carousel controls">
-        <button class="btn" id="prevBtn" aria-label="Previous slide">← Prev</button>
-        <button class="btn" id="nextBtn" aria-label="Next slide">Next →</button>
-      </div>
-    </section>
+<section class="carousel" aria-label="Feature slides">
+  <button class="carousel-arrow left"  aria-label="Previous slide">❮</button>
+  <div id="heroCarousel" class="carousel-track" role="group" aria-roledescription="carousel">
+    <figure class="slide">
+      <img id="heroImg" alt="SharePoint-backed Requests" />
+      <figcaption class="hero-caption">
+        <h2>SharePoint‑backed Requests</h2>
+        <p>Create and track website requests backed by Microsoft 365.</p>
+      </figcaption>
+    </figure>
+    <figure class="slide"><img id="slide1" alt="Azure SWA" /></figure>
+    <figure class="slide"><img id="slide2" alt="Git" /></figure>
+    <figure class="slide"><img id="slide3" alt="SharePoint" /></figure>
+  </div>
+  <button class="carousel-arrow right" aria-label="Next slide">❯</button>
+</section>
+
 
     <!-- Spotlight -->
-    <h2 class="section-header" id="spotlight">Spotlight</h2>
-    <p class="section-sub">Key aspects of this proof of concept</p>
-    <section class="grid cols-3" aria-labelledby="spotlight">
-      <article class="card spot-card">
-        <h3>
-          <svg class="spot-icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 2a10 10 0 1 0 .001 20.001A10 10 0 0 0 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"/></svg>
-          Accessibility
-        </h3>
-        <p>Semantic landmarks, keyboard navigation, visible focus and reduced‑motion preferences.</p>
-      </article>
-      <article class="card spot-card">
-        <h3>
-          <svg class="spot-icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="m12 1 9 5v6c0 5-3.8 9.7-9 11-5.2-1.3-9-6-9-11V6l9-5Zm0 3.2L6 7.4v4.6c0 3.8 2.7 7.3 6 8.3 3.3-1 6-4.5 6-8.3V7.4l-6-3.2Z"/></svg>
-          Security
-        </h3>
-        <p>Enhanced Rich Text is sanitized on render via DOMPurify; graceful fallback if blocked.</p>
-      </article>
-      <article class="card spot-card">
-        <h3>
-          <svg class="spot-icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M3 3h18v4H3V3Zm0 7h18v4H3v-4Zm0 7h18v4H3v-4Z"/></svg>
-          SharePoint + Graph
-        </h3>
-        <p>App‑only permissions for server‑side Graph calls—no tokens in the browser.</p>
-      </article>
-    </section>
+   <!-- Spotlight -->
+<section class="spotlight-section" aria-labelledby="spotlight-heading">
+  <h2 class="section-title" id="spotlight-heading">Spotlight</h2>
+
+  <div class="ql spotlight">
+    <!-- Card 1 -->
+    <a class="ql-card" href="https://portal.azure.com/#view/HubsExtension/BrowseResource/resourceType/Microsoft.Web%2FstaticSites"
+       target="_blank" rel="noopener"
+       aria-describedby="sp-az-desc sp-az-title">
+      <span class="ql-icon ql-az" aria-hidden="true">AZ</span>
+      <span class="ql-title" id="sp-az-title">Azure SWA</span>
+      <p class="ql-desc" id="sp-az-desc">Latest build & deployment</p>
+    </a>
+
+    <!-- Card 2 -->
+    <a class="ql-card" href="https://github.com/your-org/hesaa-swa-poc/actions"
+       target="_blank" rel="noopener"
+       aria-describedby="sp-gh-desc sp-gh-title">
+      <span class="ql-icon ql-gh" aria-hidden="true">GH</span>
+      <span class="ql-title" id="sp-gh-title">GitHub Actions</span>
+      <p class="ql-desc" id="sp-gh-desc">CI/CD workflow runs</p>
+    </a>
+
+    <!-- Card 3 -->
+    <a class="ql-card" href="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/Lists/Web%20Requests"
+       target="_blank" rel="noopener"
+       aria-describedby="sp-sp-desc sp-sp-title">
+      <span class="ql-icon ql-sp" aria-hidden="true">SP</span>
+      <span class="ql-title" id="sp-sp-title">Requests List</span>
+      <p class="ql-desc" id="sp-sp-desc">Create & manage items</p>
+    </a>
+
+    <!-- Card 4 -->
+    <a class="ql-card" href="https://admin.microsoft.com"
+       target="_blank" rel="noopener"
+       aria-describedby="sp-ms-desc sp-ms-title">
+      <span class="ql-icon ql-ms" aria-hidden="true">MS</span>
+      <span class="ql-title" id="sp-ms-title">M365 Admin</span>
+      <p class="ql-desc" id="sp-ms-desc">Tenant settings & health</p>
+    </a>
+  </div>
+</section>
+
 
     <!-- Quick Links -->
-    <h2 class="section-header" id="quicklinks">Quick links</h2>
-    <p class="section-sub">Frequently used destinations</p>
-    <section class="grid cols-3 quicklinks" aria-labelledby="quicklinks">
-      <a class="card" href="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/Lists/Web%20Requests" target="_blank" rel="noopener">
-        <span class="ql-icon">SP</span> Open SharePoint List
-      </a>
-      <a class="card" href="https://admin.microsoft.com" target="_blank" rel="noopener">
-        <span class="ql-icon">M365</span> Microsoft 365 Admin
-      </a>
-      <a class="card" href="https://portal.azure.com" target="_blank" rel="noopener">
-        <span class="ql-icon">AZ</span> Azure Portal
-      </a>
-    </section>
+<h2 class="section-title">Quick links</h2>
+<div class="ql">
+  <a class="ql-card" href="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/Lists/Web%20Requests" target="_blank" rel="noopener">
+    <span class="ql-icon ql-sp" aria-hidden="true">SP</span>
+    <span class="ql-label">Open SharePoint List</span>
+  </a>
+  <a class="ql-card" href="https://admin.microsoft.com" target="_blank" rel="noopener">
+    <span class="ql-icon ql-ms" aria-hidden="true">MS</span>
+    <span class="ql-label">Microsoft 365 Admin</span>
+  </a>
+  <a class="ql-card" href="https://portal.azure.com" target="_blank" rel="noopener">
+    <span class="ql-icon ql-az" aria-hidden="true">AZ</span>
+    <span class="ql-label">Azure Portal</span>
+  </a>
+</div>
+
 
     <!-- Requests -->
     <main id="main" tabindex="-1">
       <section id="requests" aria-labelledby="requests-title" style="margin-top:1.5rem">
         <div style="display:flex;justify-content:space-between;align-items:end;gap:1rem">
           <div>
-            <h2 id="requests-title">Requests</h2>
+            <h2 id="requests-title" class="section-title">Requests</h2>
             <p class="kpi"><span id="resultCount">0</span> result(s)</p>
           </div>
           <div>
@@ -228,7 +381,7 @@
 
       <!-- Create Form -->
       <section id="create" aria-labelledby="create-title" style="margin-top:1.5rem">
-        <h2 id="create-title">Create a Request</h2>
+        <h2 id="create-title" class="section-title">Create a Request</h2>
         <div class="card">
           <form id="reqForm" novalidate>
             <div>
@@ -275,6 +428,25 @@
   </div>
 
   <script>
+     (function(){
+    const track = document.getElementById('heroCarousel');
+    const slides = () => track.querySelectorAll('.slide');
+    const slideW = () => track.clientWidth;
+
+    function go(dir){
+      track.scrollBy({ left: (dir==='next' ? slideW() : -slideW()), behavior: 'smooth' });
+    }
+    document.querySelector('.carousel-arrow.left').onclick  = () => go('prev');
+    document.querySelector('.carousel-arrow.right').onclick = () => go('next');
+
+    // keyboard
+    track.addEventListener('keydown', e => {
+      if (e.key === 'ArrowRight') go('next');
+      if (e.key === 'ArrowLeft')  go('prev');
+    });
+    track.setAttribute('tabindex','0');
+  })();
+    
   // -------- Settings (your SharePoint assets) ----------
 function setApiImg(id, file) {
     document.getElementById(id).src = `/api/media/${encodeURIComponent(file)}`;
