--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
 
   <!-- DOMPurify (for safe rich text) -->
   <script defer src="https://cdn.jsdelivr.net/npm/dompurify@3.0.9/dist/purify.min.js"></script>
+    <link rel="stylesheet" href="/assets/layout.css">
+  <script src="/assets/include.js" defer></script> 
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
@@ -510,7 +512,7 @@
     });
   </script>
   <div data-include="/partials/footer.html"></div>
-<script src="/assets/include.js" defer></script>
+
 
 </body>
 </html>
