--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     start();
   })();
     // ---- Year ----
-    document.getElementById('yr').textContent = new Date().getFullYear();
+    //document.getElementById('yr').textContent = new Date().getFullYear();
 
     // ---- Requests table ----
     const rowsEl   = document.getElementById('rows');
