--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/assets/layout.css">
+  <link rel="icon" href="/assets/HESAAFAVICON.ico" type="image/x-icon">
   <title>HESAA</title>
 
   <style>
@@ -276,7 +277,7 @@
       <section id="requests" aria-labelledby="requests-title" style="margin-top:1.6rem">
         <div style="display:flex;justify-content:space-between;align-items:end;gap:1rem">
           <div>
-            <h2 id="requests-title" class="section-title">Requests</h2>
+            <h2 id="requests-title" class="section-title page-title">Requests</h2>
             <p class="kpi"><span id="resultCount">0</span> result(s)</p>
           </div>
           <div>
