--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
     tbody td{padding:.7rem;border-top:1px solid var(--border);vertical-align:top}
     tbody tr:hover{background:rgba(37,99,235,.05)}
     .kpi{color:var(--muted);font-size:.9rem}
+.table-scroller { overflow-x:auto; -webkit-overflow-scrolling:touch; }
+table { min-width:720px; } /* keep columns readable */
+thead th, tbody td { white-space:nowrap; }
+
+@media (max-width: 700px) {
+  table { font-size: .95rem; }
+  thead th, tbody td { padding:.6rem .55rem; }
+}
 
     /* Form */
     form{display:grid;gap:.75rem}
@@ -288,7 +296,7 @@
         </div>
 
         <div class="card" style="margin-top:.6rem">
-          <div role="region" aria-label="Requests table">
+          <div role="region" aria-label="Requests table" class="table-scroller">
             <table>
               <thead>
                 <tr>
