--- a/index.html
+++ b/index.html
@@ -560,6 +560,8 @@ const rowsEl   = document.getElementById('rows');
       }
     });
   </script>
+<!-- Breadcrumb placeholder -->
+<div id="breadcrumb-container"></div>
 
   <div data-include="/partials/footer.html"></div>
   <!-- Scripts -->
