--- a/students.html
+++ b/students.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Students – HESAA</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>HESAA Students</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/assets/layout.css">
+  <script src="/assets/include.js" defer></script>
+  <script src="/assets/site.js" defer></script>
 </head>
 <body>
   <div data-include="/partials/header.html"></div>
-
-  <main class="wrap" style="padding:24px 16px">
+  <div id="breadcrumb-container"></div>
+  <main id="main" class="wrap">
     <h1>Students</h1>
-    <p>Stub content. We’ll fill this in later.</p>
+    <p>Find grants, scholarships, and loans tailored to New Jersey students.</p>
   </main>
-
   <div data-include="/partials/footer.html"></div>
-  <script src="/assets/include.js" defer></script>
 </body>
 </html>
