--- a/index.html
+++ b/index.html
@@ -33,40 +33,40 @@
         <!-- Slide 1 -->
 <div class="carousel-item active">
   <img id="heroHeaderImg" class="d-block w-100" alt="Hero: students and success">
-  <div class="hero-overlay">
+<!--  <div class="hero-overlay">
     <h1>Helping New Jersey Students Succeed</h1>
     <p>Your path to grants, scholarships, and affordable loans.</p>
     <div class="mt-3">
       <a class="btn btn-primary" href="#requestForm">Submit a Request</a>
     </div>
-  </div>
+  </div>-->
 </div>
 
 <div class="carousel-item">
   <img id="slide1" class="d-block w-100" alt="Financial aid resources">
-  <div class="hero-overlay">
+ <!--  <div class="hero-overlay">
     <h1>Grants & Scholarships</h1>
     <p>Explore programs that make college more affordable.</p>
     <div class="mt-3">
       <a class="btn btn-primary" href="/students.html">Explore Programs</a>
     </div>
-  </div>
+  </div>-->
 </div>
 
 <div class="carousel-item">
   <img id="slide2" class="d-block w-100" alt="Guidance and counseling">
-  <div class="hero-overlay">
+<!--   <div class="hero-overlay">
     <h1>Guidance That Meets You Where You Are</h1>
     <p>Advice, timelines, and checklists from application to award.</p>
-  </div>
+  </div>-->
 </div>
 
 <div class="carousel-item">
   <img id="slide3" class="d-block w-100" alt="Tools and portals">
-  <div class="hero-overlay">
+ <!--  <div class="hero-overlay">
     <h1>Tools & Portals</h1>
     <p>Log in, track status, and manage documents securely.</p>
-  </div>
+  </div>-->
 </div>
 
       </div>
