--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </div>
 
     <div class="form-row">
-      <div style="min-width:220px">
+      <div>
         <label for="fType">Type *</label>
         <select id="fType" name="RequestType" required>
           <option value="">Select…</option>
@@ -200,7 +200,7 @@
           <option>Inquiry</option><option>Maintenance Message</option>
         </select>
       </div>
-      <div style="min-width:220px">
+      <div>
         <label for="fPri">Priority *</label>
         <select id="fPri" name="Priority" required>
           <option value="">Select…</option>
@@ -211,7 +211,7 @@
         <input id="fEnd" name="RequestEndDate" type="checkbox" />
         <label for="fEnd">End Date?</label>
       </div>
-      <div style="min-width:260px; margin-left:auto">
+      <div style="margin-left:auto">
     <label for="fFile">Attachment</label>
     <input id="fFile" name="Attachment" type="file" />
   </div>
