--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </div>
       <div style="margin-left:auto">
     <label for="fFile">Attachment</label>
-    <input id="fFile" name="Attachment" type="file" />
+    <input id="fFile" name="file" type="file" />
   </div>
     </div>
 
