--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 <a class="spot-card" href="https://portal.azure.com/" target="_blank" rel="noopener"
    aria-label="Azure Static Web Apps — latest build & deployment status">
   <span class="spot-badge spot-azure">
-    <!-- Azure‑style “A” blade (inline SVG) -->
-    <svg class="spot-ico" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-      <path d="M3 19l7.6-15h2.8L21 19h-3l-2.3-4.7h-6.5L7 19H3zm10.8-7.8L12 6.1 10.2 11.2h3.6z" />
-    </svg>
+<!-- Azure badge -->
+<span class="spot-badge spot-azure" aria-hidden="true">
+  <img class="spot-ico" src="/assets/azure.svg" alt="" />
+</span>
   </span>
   <div class="spot-body">
     <strong>Azure SWA</strong>
@@ -119,10 +119,9 @@
 <a class="spot-card" href="https://yoursharepointsite" target="_blank" rel="noopener"
    aria-label="Requests List — create and manage SharePoint items">
 <span class="spot-badge spot-sp" aria-hidden="true">
-  <!-- SharePoint‑style glyph -->
-  <svg class="spot-ico" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
-    <path d="M14.6 5.2a4.2 4.2 0 110 8.4H13v3.1a3.7 3.7 0 11-3.7-3.7H7.2a3 3 0 110-6h2.1a4.3 4.3 0 015.3-1.8zM9.3 10.9c.8 0 1.4-.5 1.4-1.2s-.5-1.1-1.5-1.1H8.5c-.4 0-.7-.3-.7-.6 0-.4.3-.6.9-.6h1.9c.3 0 .6.1.8.4l.9-.9c-.5-.5-1.1-.7-1.8-.7H8.6c-1.1 0-2 .7-2 1.7 0 .9.7 1.5 1.6 1.7-.9.3-1.5.9-1.5 1.7 0 1 .9 1.7 2.1 1.7h1.8c.7 0 1.4-.3 1.9-.9l-1-.8c-.2.2-.5.4-.9.4H9.3z" />
-  </svg>
+<!-- SharePoint badge -->
+<span class="spot-badge spot-sp" aria-hidden="true">
+  <img class="spot-ico" src="/assets/MSP.svg" alt="" />
 </span>
 
   <div class="spot-body">
@@ -140,9 +139,8 @@
   <h2 class="text-center mb-3">Quick links</h2>
   <div class="ql">
     <a class="ql-card" href="https://yoursharepointsite" target="_blank" rel="noopener">
-      <span class="ql-icon" style="background:#1a9c86">
-  <svg class="ql-svg" viewBox="0 0 24 24" aria-hidden="true"><path fill="#fff"
-    d="M4 6h12v4H4zM4 12h8v4H4zM18 6h2v12h-2z"/></svg>
+<span class="ql-icon" style="background:#1a9c86">
+  <img class="ql-svg" src="/assets/MSP.svg" alt="" />
 </span>
       <div>
         <strong>Open SharePoint List</strong>
@@ -151,19 +149,19 @@
 
     <a class="ql-card" href="https://admin.microsoft.com" target="_blank" rel="noopener">
       <span class="ql-icon" style="background:#0078d4">
-  <svg class="ql-svg" viewBox="0 0 24 24" aria-hidden="true"><path fill="#fff"
-    d="M4 4h7v7H4zM13 4h7v7h-7zM4 13h7v7H4zM13 13h7v7h-7z"/></svg>
+<!-- Microsoft 365 Admin -->
+<span class="ql-icon" style="background:#0078d4">
+  <img class="ql-svg" src="/assets/microsoft.svg" alt="" />
 </span>
-
       <div>
         <strong>Microsoft 365 Admin</strong>
       </div>
     </a>
 
     <a class="ql-card" href="https://portal.azure.com" target="_blank" rel="noopener">
-      <span class="ql-icon" style="background:#0ea5e9">
-  <svg class="ql-svg" viewBox="0 0 24 24" aria-hidden="true"><path fill="#fff"
-    d="M3 19l7.6-15h2.8L21 19h-3l-2.3-4.7h-6.5L7 19H3z"/></svg>
+<!-- Azure Portal -->
+<span class="ql-icon" style="background:#0ea5e9">
+  <img class="ql-svg" src="/assets/ms-azure.svg" alt="" />
 </span>
 
       <div>
