--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <h2 class="text-center mb-3">Quick links</h2>
   <div class="ql">
     <a class="ql-card" href="https://yoursharepointsite" target="_blank" rel="noopener">
-<span class="ql-icon" style="background:#1a9c86">
+<span class="ql-icon">
   <img class="ql-svg" src="/assets/MSP.svg" alt="" />
 </span>
       <div>
@@ -148,7 +148,7 @@
     </a>
 
     <a class="ql-card" href="https://admin.microsoft.com" target="_blank" rel="noopener">
-      <span class="ql-icon" style="background:#0078d4">
+      <span class="ql-icon">
 <!-- Microsoft 365 Admin -->
 <span class="ql-icon" style="background:#0078d4">
   <img class="ql-svg" src="/assets/microsoft.svg" alt="" />
@@ -160,7 +160,7 @@
 
     <a class="ql-card" href="https://portal.azure.com" target="_blank" rel="noopener">
 <!-- Azure Portal -->
-<span class="ql-icon" style="background:#0ea5e9">
+<span class="ql-icon">
   <img class="ql-svg" src="/assets/ms-azure.svg" alt="" />
 </span>
 
