--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <span class="spot-badge spot-sp" aria-hidden="true">
   <img class="spot-ico" src="/assets/MSP.svg" alt="" />
 </span>
-
+</span>
   <div class="spot-body">
     <strong>Requests List</strong>
     <p class="kpi">Create &amp; manage SharePoint items.</p>
@@ -150,7 +150,7 @@
     <a class="ql-card" href="https://admin.microsoft.com" target="_blank" rel="noopener">
       <span class="ql-icon">
 <!-- Microsoft 365 Admin -->
-<span class="ql-icon" style="background:#0078d4">
+<span class="ql-icon">
   <img class="ql-svg" src="/assets/microsoft.svg" alt="" />
 </span>
       <div>
