Fix: load React UMD before IIFE + footer and homecontent updates

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <body class="antialiased bg-white text-slate-900">
     <!-- Vite/React mount -->
     <div id="root"></div>
+<!-- React UMD (must be before the homepage IIFE) -->
+<script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
     <!-- SPA IIFE bundle (built by Vite) -->
     <script src="/assets/app/hesaa-homepage.iife.js" defer></script>
